--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,71 +4,134 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding_app"
+    android:weightSum="1"
     tools:context="android.br.jogodavelha.MainActivity">
 
 
-    <GridLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="3">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:src="@drawable/o" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Jogador da Vez: "/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/vez"/>
+        </LinearLayout>
 
-        <ImageView
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:background="@drawable/border"
-            android:src="@drawable/x" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="60dp"
+            android:columnCount="3"
+            android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:src="@drawable/vazio" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <ImageView
-            android:background="@drawable/border"
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:src="@drawable/vazio" />
+                <ImageView
+                    android:id="@+id/img1"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
 
-        <ImageView
-            android:background="@drawable/border"
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:src="@drawable/vazio" />
+                <ImageView
+                    android:id="@+id/img2"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
 
-        <ImageView
-            android:background="@drawable/border"
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:src="@drawable/vazio" />
+                <ImageView
+                    android:id="@+id/img3"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
+            </LinearLayout>
 
-        <ImageView
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:src="@drawable/vazio" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <ImageView
-            android:background="@drawable/border"
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:src="@drawable/vazio" />
+                <ImageView
+                    android:id="@+id/img4"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
 
-        <ImageView
-            android:layout_width="@dimen/image"
-            android:layout_height="@dimen/image"
-            android:scaleType="centerInside"
-            android:src="@drawable/vazio" />
-    </GridLayout>
+                <ImageView
+                    android:id="@+id/img5"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
+
+                <ImageView
+                    android:id="@+id/img6"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/img7"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
+
+                <ImageView
+                    android:id="@+id/img8"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
+
+                <ImageView
+                    android:id="@+id/img9"
+                    android:layout_width="@dimen/image"
+                    android:layout_height="@dimen/image"
+                    android:background="@drawable/border"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/vazio" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/mensagem"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/fontMensagem" />
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+
 </LinearLayout>
