--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="padding_app">40dp</dimen>
+    <dimen name="padding_app">20dp</dimen>
     <dimen name="image">100dp</dimen>
+    <dimen name="fontMensagem">20sp</dimen>
 </resources>
